[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/game/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/HpBar.gd" type="Script" id=3]
[ext_resource path="res://src/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/game/battle1.gd" type="Script" id=6]
[ext_resource path="res://assets/background/Sound/Dragon 2 (intro).wav" type="AudioStream" id=7]
[ext_resource path="res://src/game/BackMusic.gd" type="Script" id=8]
[ext_resource path="res://assets/background/Sound/Dragon 2(main).wav" type="AudioStream" id=9]
[ext_resource path="res://src/Foes/ShieldKnight.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/dragon/Dragon.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Foes/Charge.gd" type="Script" id=12]
[ext_resource path="res://assets/menu/EndMenu/russo.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/menu/EndMenu/montserrat.tres" type="DynamicFont" id=14]
[ext_resource path="res://src/game/DialogMenu.gd" type="Script" id=15]

[node name="Game" type="Node2D"]
position = Vector2( -2.66968, 18.6877 )
script = ExtResource( 6 )

[node name="timer_delay_finish_dragon" type="Timer" parent="."]
wait_time = 5.0

[node name="timer_delay_finish_player" type="Timer" parent="."]

[node name="Dragon" parent="." instance=ExtResource( 11 )]
position = Vector2( 884.67, 433.312 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 119, 494 )

[node name="HpBar" type="ProgressBar" parent="Player"]
visible = false
margin_left = -203.303
margin_top = -346.877
margin_right = 241.0
margin_bottom = -230.756
script = ExtResource( 3 )

[node name="ShieldKnight" parent="." instance=ExtResource( 10 )]
position = Vector2( 69.6697, 488.312 )

[node name="Charge2" type="Label" parent="ShieldKnight"]
margin_left = -181.822
margin_top = -558.331
margin_right = 199.178
margin_bottom = -493.331
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 13 )
text = "ТОГДА ВПЕРЁД! 
СПРЯЧЬСЯ ЗА МОИМ ЩИТОМ"
valign = 1
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="ShieldKnight/Charge2"]
wait_time = 6.0

[node name="timer_time_left" type="Timer" parent="."]
wait_time = 5.0

[node name="Level" parent="." instance=ExtResource( 1 )]
position = Vector2( 488.67, 298.312 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10
offset = Vector2( -1300, -200 )
transform = Transform2D( 1, 0, 0, 1, -1300, -200 )

[node name="Debug" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 1.377
anchor_top = 0.5
anchor_right = 1.377
anchor_bottom = 0.5
margin_left = -20.0481
margin_top = 48.0
margin_right = 15.9519
margin_bottom = 102.0
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Angle"

[node name="End" type="Node" parent="."]

[node name="MusicTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="BackMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
script = ExtResource( 8 )

[node name="DialogMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
script = ExtResource( 15 )

[node name="Question" type="Label" parent="DialogMenu"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -321.0
margin_top = -28.8
margin_right = -36.0
margin_bottom = 28.2001
custom_fonts/font = ExtResource( 14 )
text = "Ну что? Ты готов?"
align = 1
valign = 1

[node name="No" type="Button" parent="DialogMenu/Question"]
anchor_left = 0.089
anchor_top = 0.5
anchor_right = 0.089
anchor_bottom = 0.5
margin_left = 198.876
margin_top = 39.5
margin_right = 337.876
margin_bottom = 81.5
custom_fonts/font = ExtResource( 13 )
text = "Нет"

[node name="Yes" type="Button" parent="DialogMenu/Question"]
anchor_left = -4.535
anchor_top = -4.142
anchor_right = -4.535
anchor_bottom = -4.142
margin_left = 1240.72
margin_top = 306.094
margin_right = 1379.72
margin_bottom = 348.094
custom_fonts/font = ExtResource( 13 )
text = "Да"

[connection signal="timeout" from="timer_delay_finish_dragon" to="." method="_on_timer_delay_finish_timeout"]
[connection signal="timeout" from="timer_delay_finish_dragon" to="." method="_on_timer_delay_finish_dragon_timeout"]
[connection signal="timeout" from="timer_delay_finish_player" to="." method="_on_timer_delay_finish_player_timeout"]
[connection signal="timeout" from="ShieldKnight/Charge2/Timer" to="ShieldKnight/Charge2" method="_on_Timer_timeout"]
[connection signal="timeout" from="timer_time_left" to="." method="_on_timer_time_left_timeout"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
[connection signal="finished" from="Intro" to="BackMusic" method="_on_Intro_finished"]
[connection signal="pressed" from="DialogMenu/Question/No" to="DialogMenu" method="_on_No_pressed"]
[connection signal="pressed" from="DialogMenu/Question/Yes" to="DialogMenu" method="_on_Yes_pressed"]
